--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -18,6 +18,6 @@
   <% end %>
     <div class="item-bottom">
       <span class="left"><%= link_to_unless_current image_tag(microThumb(item.owner), :title => item.owner.login), item.owner %></span>
-      <span class="font-smaller right"><%= distance_of_time_in_words(item.created_at, Time.now) %> <%= t("ago") %></span>
+      <span class="date right"><%= distance_of_time_in_words(item.created_at, Time.now) %> <%= t("ago") %></span>
     </div>
 </div>
