--- a/app/views/sent/_form.html.erb
+++ b/app/views/sent/_form.html.erb
@@ -1,17 +1,13 @@
 <%= semantic_form_for :message, :url => {:controller => "sent", :action => "create"}, :html => { :id => "message-form" }, :remote => true do |f| %>
   <%= f.error_messages %>
-
+  <div id= "message_errors" style="display:none"></div>
   <%= f.inputs do %>
    <li>
       <% if params[:to] %>
-      <label><%= t("mailbox.to") %></label><%= User.find(params[:to]).login %>
-        <%= f.input :to, :value => params[:to], :as => :hidden %>
+        <%= f.input :to, :label => t("mailbox.to"), :input_html => { :value => params[:to] } %>
       <% else %>
-        <label><%= t("mailbox.to") %></label>
-        <select name="message[to][]">
-          <%= options_from_collection_for_select(current_user.friends + current_user.inverse_friends, :id, :login, @message.to) %>
-        </select>
-      <% end %>
+        <%= f.input :to, :label => t("mailbox.to"), :input_html => { :value => params[:id] } %>
+        <% end %>
     </li>
     <%= f.input :subject, :label => t("mailbox.subject") %>
     <%= f.input :body, :as => :text, :label => t("mailbox.body")  %>
