--- a/app/views/share/userarea/_profileusermenu.rhtml
+++ b/app/views/share/userarea/_profileusermenu.rhtml
@@ -1,6 +1,8 @@
 <% if user_signed_in? and user.login != current_user.login %>
   <ul class="font-smaller button horizontal">
-    <li class="button"><%= link_to t("menu.user.sendMessage"), new_sent_path(:to => user.id), :remote => true, :rel => "modalbox" %></li>
+    <li class="button">
+      <%= link_to t("menu.user.sendMessage"), new_sent_path(:to => user), :remote => true, :id => "send_message" %>
+    </li>
     <% if not current_user.following?(user) %>
       <li class="button"><%= link_to t("follow"), follow_user_path, :method => :put %></li>
     <% end %>
