--- a/app/views/sent/_form.html.erb
+++ b/app/views/sent/_form.html.erb
@@ -1,5 +1,13 @@
-<%= semantic_form_for :message, :url => {:controller => "sent", :action => "create"}, :html => { :id => "message-form" }, :remote => true do |f| %>
-  <%= f.error_messages %>
+<%= content_for :head do %>
+  <script type="text/javascript">
+    $(document).ready(function (){
+      $('#message-form').railsAjaxValidation();
+    });
+  </script>
+<% end %>
+<%= semantic_form_for @message, :url => { :controller => "sent", :action => "create"}, :remote => true, :validate => true do |f| %>
+  <%= render "share/error_messages", :target => @message %>
+
   <div id= "message_errors" style="display:none"></div>
   <%= f.inputs do %>
    <li>
@@ -9,10 +17,10 @@
         <%= f.input :to, :label => t("mailbox.to"), :input_html => { :value => params[:id] } %>
         <% end %>
     </li>
-    <%= f.input :subject, :label => t("mailbox.subject") %>
+    <%= f.input :subject, :required => false, :label => t("mailbox.subject") %>
     <%= f.input :body, :as => :text, :label => t("mailbox.body")  %>
   <% end %>
-  <%= f.buttons do %>
-    <%= f.submit t("submit") %>
+  <%= f.actions do %>
+    <%= f.action :submit, :label => t("submit"), :button_html => { :class => "submit", :disable_with => "..." } %>
   <% end %>
 <% end %>
