--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,5 +1,26 @@
 <ul>
 <% @followers.each do |follower| %>
-  <li><%= render :partial => "share/usertiny", :locals => { :user => follower } %></li>
+  <li>
+    <%= render :partial => "share/usertiny", :locals => { :user => follower } %>
+    <ul>
+      <li>
+        <%= link_to "Block", block_user_path(follower), :method => :put %>
+      </li>
+    </ul>
+  </li>
 <% end %>
 </ul>
+<% if current_user == @user and @blocked_users  %>
+  <ul>
+    <% @blocked_users.each do |blocked_user| %>
+      <li>
+        <%= render :partial => "share/usertiny", :locals => { :user => blocked_user } %>
+        <ul>
+          <li>
+            <%= link_to "Block", unblock_user_path(blocked_user), :method => :put %>
+          </li>
+        </ul>
+      </li>
+    <% end %>
+    </ul>
+<% end %>
