--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,10 +15,10 @@
     <%= link_to t("userarea.edit.profile").html_safe, edit_polymorphic_path([@user, "userdetails"]) %>
   </div>
 <% else %>
-    <%= render :partial => "share/userarea/profileusermenu", :locals => { :user => @user } %>
-    <div class="clearfix"></div>
-    <div id="new_message" style="display:none;">
-    <%= render :partial => "sent/form" %>
+  <%= render :partial => "share/userarea/profileusermenu", :locals => { :user => @user } %>
+  <div class="clearfix"></div>
+  <div id="new_message" style="display:none;">
+  <%= render :partial => "sent/form" %>
   </div>
 <% end %>
 <% if @user %>
@@ -33,10 +33,14 @@
       <div id="activity">
         <h2><%= t("activity").html_safe %></h2>
         <div class="block ui-corner-all">
-            <span><%= @user.login %></span>
-            <span><%= link_to t("menu.user.followings"), followings_user_path %> (<%= @followings.size %>)</span>
-            <span><%= t("and") %></span>
-            <span><%= link_to t("menu.user.followers"), followers_user_path %> (<%= @followers.size %>)</span>
+            <% if @followings and @followings_count %>
+              <span><%= @user.login %></span>
+              <span><%= link_to t("menu.user.followings"), followings_user_path %> (<%= @followings_count %>)</span>
+            <% end %>
+            <% if @followers and @followers_count %>
+              <span><%= t("and") %></span>
+              <span><%= link_to t("menu.user.followers"), followers_user_path %> (<%= @followers_count %>)</span>
+            <% end %>
             <hr class="divider" />
             <%= render :partial => "activity", :locals => { :audits => @audits } %>
         </div>
