--- a/app/views/users/_activity.html.erb
+++ b/app/views/users/_activity.html.erb
@@ -20,7 +20,13 @@
               end
 
             when "Userdetails"
-              t("hasUpdatedtheUserdetails").html_safe
+              case audit.action
+              when "create"
+                t("hasJoinedTheCommunity").html_safe
+              when "update"
+                t("hasUpdatedtheUserdetails").html_safe
+              end
+
             when "Group"
               group = Group.find(audit.auditable_id)
               case audit.action
@@ -29,6 +35,7 @@
               when "update"
                 link_to(t("hasUpdatedAGroup", :title => group.title).html_safe, group)
               end
+
             when "Location"
               location = Location.find(audit.auditable_id)
               resource = location.locatable_type.constantize.find(location.locatable_id)
@@ -38,6 +45,7 @@
               when "update"
                 link_to(t("hasUpdatedALocation", :title => resource.title).html_safe, resource)
               end
+
             when "Ping"
               ping = Ping.find(audit.auditable_id)
               resource = ping.pingable_type.constantize.find(ping.pingable_id) # if ping.pingable_type.to_s == "Item"
@@ -54,6 +62,7 @@
                    link_to(t("usersPingIsClosed", :title => resource.title).html_safe, ping)
                 end
               end
+
             when "Meetup"
               meetup = Meetup.find(audit.auditable_id)
               case audit.action
@@ -62,6 +71,7 @@
               when "update"
                 link_to(t("hasUpdatedAMeetup", :title => meetup.title).html_safe, meetup)
               end
+
             when "Comment"
               comment = Comment.find(audit.auditable_id)
               resource = comment.commentable_type.constantize.find(comment.commentable_id)
