--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -26,6 +26,7 @@
   <div id="tabs">  
     <ul>
         <li><a href="#what"><%= t("what") %></a></li>
+        <li><a href="#members"><%= t("members") %></a></li>
         <li><a href="#where"><%= t("where") %></a></li>
         <li><a href="#images"><%= t("form.resource.images") %></a></li>
         <li><a href="#attachments"><%= t("menu.user.resources") %></a></li>      
@@ -38,7 +39,12 @@
         <%= f.input :tag_list %>
       <% end %>
     </div>
-    <div id="where">
+    <div id="members" class="tab_content">
+       <%= f.inputs do %>
+         <%= f.input :users, :as => :check_boxes, :member_label => Proc.new { |u| "#{image_tag(tinyThumb(u), :alt => u.login, :title => u.login)}<br />#{u.login}".html_safe } %>
+       <% end %>
+    </div>
+    <div id="where" class="tab_content">
        <%= f.inputs do %>
         <%= render :partial => "locations/nested_form", :locals => { :f => f, :belongs_to => "group" } %>
        <% end %>
