--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -1,3 +1,20 @@
-<tr class="ping font-smaller">
-    <td><%= group.images.first.image.url if group.images.size > 0 %> <%= link_to group.title, group %></td>
-</tr>
+<div class="list-item ui-corner-all">
+  <%= render :partial => "groups/groupmenu", :locals => {:group => group} if logged_in? and group.owner == current_user %>
+  <div class="item-members-count font-smaller">
+    <%= image_tag "icons/icon_group.png", :alt => group.title, :title => group.title %> (<%= group.users.size %>)
+  </div>
+  <p class="font-small"><%= link_to shorten(group.title, 18), group, :title => group.title  if group.title %></p>
+  <% if group.images.first %>
+    <div class="image-big ui-corner-all">
+      <%= link_to image_tag(group.images.first.image.url(:small)), group, :title => group.title, :class => "ui-corner-all" %>
+    </div>
+  <% else %>
+    <div class="details">
+      <p class="font-small"><%=h shorten(group.description) if group.description %></p>
+    </div>
+  <% end %>
+    <div class="item-bottom">
+      <span class="left"><%= link_to_unless_current image_tag(microThumb(group.owner), :title => group.owner.login), group.owner %></span>
+      <span class="date right"><%= distance_of_time_in_words(group.created_at, Time.now) %> <%= t("ago") %></span>
+    </div>
+</div>
