--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -8,7 +8,7 @@
   </div>
   <p class="font-small"><%= link_to shorten(item.title, 18), item, :title => item.title  if item.title %></p>
   <% if item.images.first %>
-    <div class="image-big ui-corner-all">
+    <div class="details image-big ui-corner-all">
       <%= link_to image_tag(item.images.first.image.url(:small)), item, :title => item.title, :class => "ui-corner-all" %>
     </div>
   <% else %>
