sort links revised

--- a/app/views/items/_orderBy.html.erb
+++ b/app/views/items/_orderBy.html.erb
@@ -4,21 +4,21 @@
       :search => $search,
       :field => 'title',
       :title => t("order.title"),
-      :params => params[:search]
+      :params => params
     }
   %>
   <%= render :partial => "share/search/sortlink", :locals => {
       :search => $search,
       :field => 'created_at',
       :title => t("order.date"),
-      :params => params[:search]
+      :params => params
     }
   %>
   <%= render :partial => "share/search/sortlink", :locals => {
       :search => $search,
       :field => 'location_city',
       :title => t("order.location"),
-      :params => params[:search]
+      :params => params
     }
   %>
 </span>
