--- a/app/views/share/_tags.html.erb
+++ b/app/views/share/_tags.html.erb
@@ -2,7 +2,7 @@
   <p class="font-smaller">
   <%= t("tags") %>:
   <% for tag in tags %>
-      <span><%= link_to tag, :controller => :items, :tag => tag.name %></span>
+      <span><%= link_to tag, :controller => :items, "q[tag]" => tag.name %></span>
     <% end %>
   </p>
 <% end %>
