--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @group.title.html_safe %></h1>
 <%= render :partial => "groupmenu", :locals => { :group => @group } %>
-<% if logged_in? and not @group.attended?(current_user) %>
+<% if logged_in? and not @group.member?(current_user) %>
     <%= render :partial => "pings/form", :locals => {:pingable => @group} %>
 <% end %>
 <div class="sub2cols">
