--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -492,6 +492,9 @@ form.formtastic .date fieldset legend span{
   padding-top:0.2em;
 }
 
+form.formtastic fieldset ol fieldset ol {
+    padding: 15% !important;
+}
 form.formtastic fieldset fieldset legend {
   background:none repeat scroll 0 0 transparent;
   border:medium none;
