--- a/app/views/meetups/_form.html.erb
+++ b/app/views/meetups/_form.html.erb
@@ -3,65 +3,65 @@
     $(document).ready(function (){
   
       /* TABS */
-      $("#tabs").tabs(); 	
+      $("#tabs").tabs();
       showErrorTabs();
-      
-      <% if params[:item] && params[:item][:attachable_id] %>
-        /* preselect pinged resource (item) */
-        id = <%= params[:item][:attachable_id] %>;
-        $('#attachments .field-add').click();
-        $('#attachments select').val(id);
-      <% end %>
-      <% if params[:action] == "new" %>
-        /* Current User and Pinger is participating by default */
-        $("#meetup_user_ids_<%= current_user.id %>").attr("checked", "checked");
-        <% if @ping %>
-          $("#meetup_user_ids_<%= @ping.owner.id %>").attr("checked", "checked");
-        <% end %>
-      <% end %>
-      /* hide additional location fields */
-      $("#meetup_locations_attributes_1_address_input, #meetup_locations_attributes_1_city_input, #meetup_locations_attributes_1_zip_input, #meetup_locations_attributes_1_country").hide();
-      $("#meetup_locations_attributes_1_country").parent().find("label").hide();           
-    });
-	</script>
+
+  <% if params[:item] && params[:item][:attachable_id] %>
+      /* preselect pinged resource (item) */
+      id = <%= params[:item][:attachable_id] %>;
+      $('#attachments .field-add').click();
+      $('#attachments select').val(id);
+  <% end %>
+  <% if params[:action] == "new" and !params[:item] %>
+      /* blank memberlist */
+      $("#who .choices-group").find("input ").removeAttr("checked");
+  <% end %>
+    /* hide additional location fields */
+    $("#meetup_locations_attributes_1_address_input, #meetup_locations_attributes_1_city_input, #meetup_locations_attributes_1_zip_input, #meetup_locations_attributes_1_country").hide();
+    $("#meetup_locations_attributes_1_country").parent().find("label").hide();
+  });
+  </script>
 <% end %>
 <%= semantic_form_for @meetup, :method => "get"   do |f| %>
   <%= render "share/error_messages", :target => @meetup %>
-  <div id="tabs">  
+  <div id="tabs">
     <ul>
-        <li><a href="#what"><%= t("what") %></a></li>
-        <li><a href="#where"><%= t("where") %></a></li>          
-        <li><a href="#when"><%= t("when") %></a></li>      
-        <li><a href="#who"><%= t("who") %></a></li>
-        <li><a href="#attachments"><%= t("menu.user.resources") %></a></li> 
+      <li><a href="#what"><%= t("what") %></a></li>
+      <li><a href="#where"><%= t("where") %></a></li>
+      <li><a href="#when"><%= t("when") %></a></li>
+      <li><a href="#who"><%= t("who") %></a></li>
+      <li><a href="#attachments"><%= t("menu.user.resources") %></a></li>
     </ul>
-     <div id="what">
-       <%= f.inputs do %>
-        <%= f.input :owner_id, :as => :hidden, :value => current_user.id %> 
-        <%= f.input :ownertype, :as => :hidden, :value => "User" %> 
+    <div id="what">
+      <%= f.inputs do %>
+        <%= f.input :owner_id, :as => :hidden, :value => current_user.id %>
+        <%= f.input :ownertype, :as => :hidden, :value => "User" %>
         <%= f.input :title %>
         <%= f.input :description, :label => I18n.t("formtastic.labels.meetup.description") %>
-       <% end %>
-     </div>
-     <div id="where">
-       <%= f.inputs do %>
+      <% end %>
+    </div>
+    <div id="where">
+      <%= f.inputs do %>
         <%= render :partial => "locations/nested_form", :locals => { :f => f, :belongs_to => "meetup" } %>
-       <% end %>
-     </div>
-     <div id="when">
-         <%= f.inputs do %>
+      <% end %>
+    </div>
+    <div id="when">
+      <%= f.inputs do %>
         <%= render :partial => "events/nested_form", :locals => { :f => f, :belongs_to => "meetup" } %>
-       <% end %>
-     </div>
-     <div id="who"> 
-       <%= f.inputs do %> 
-        <%= f.input :users, :as => :check_boxes, :member_label => Proc.new { |u| "#{image_tag(tinyThumb(u), :alt => u.login, :title => u.login)}<br />#{u.login}".html_safe } %>
-      <% end %>     
-     </div>
+      <% end %>
+    </div>
+    <div id="who">
+      <div class="button new">
+        <%= link_to "invite users", "#" %>
+      </div>
+      <%= f.inputs do %>
+        <%= f.input :users, :as => :check_boxes, :collection => @meetup.users, :member_label => Proc.new { |u| "#{image_tag(tinyThumb(u), :alt => u.login, :title => u.login)}<br />#{u.login}".html_safe } %>
+      <% end %>
+    </div>
     <div id="attachments" class="tab_content">
       <%= render :partial => "items/item_attachments", :locals => { :object => @meetup, :f => f } %>
     </div>
-   </div>
+  </div>
   <%= f.buttons do %>
     <br />
     <%= f.submit t("save") %>
