--- a/app/views/meetups/_form.html.erb
+++ b/app/views/meetups/_form.html.erb
@@ -52,7 +52,7 @@
     </div>
     <div id="who">
       <div class="button new">
-        <%= link_to "invite users", "#" %>
+        <%= link_to t("formtastic.labels.meetup.invite_users"), "#" %>
       </div>
       <%= f.inputs do %>
         <%= f.input :users, :as => :check_boxes, :collection => @meetup.users, :member_label => Proc.new { |u| "#{image_tag(tinyThumb(u), :alt => u.login, :title => u.login)}<br />#{u.login}".html_safe } %>
