--- a/app/views/layouts/userarea.rhtml
+++ b/app/views/layouts/userarea.rhtml
@@ -11,7 +11,8 @@
         &raquo; <%= link_to @active_menuitem_l1, @active_menuitem_l1_link %>
       <% end %>
       <% if @active_menuitem_l2 %>
-        &raquo; <%= link_to t("#{@active_menuitem_l2}.plural").html_safe, user_items_path("q" => params[:q]) %>
+
+        &raquo; <%= link_to t("#{@active_menuitem_l2}").html_safe, @active_menuitem_l2_link %>
       <% end %>
     </h1>
     <%  if logged_in? && @user.location %>
