--- a/app/views/share/_map.rhtml
+++ b/app/views/share/_map.rhtml
@@ -1,4 +1,3 @@
-<div class="map box ui-corner-all center" style="width:400px;">
-  <%= gmaps("map_options" => { "detect_location" => true, "center_longitude" => 180, "center_on_user" => false , "auto_adjust" => true, "zoom" => 15, "auto_zoom" => false}, 
-      "markers" => { "data" => locations }) %>
+<div class="box ui-corner-all center" style="width:400px;">
+  <%= gmaps4rails(locations) %>
 </div>
